Fix scale of image so it leaves no transparent borders.

BUG:143029

svn path=/branches/koffice/1.6/koffice/; revision=668216